feat: extend EEAGenerator